--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 .container{
-  background:linear-gradient(rgba(0,0,0,0.7),rgba(72,149,239,0.3)), url(/images/bgSixth.jpg);
+  background:linear-gradient(rgba(0,0,0,0.7),rgba(72,149,239,0.3)), url(images/bgFirst.jpg);
   height: 100vh;
   width: 100%;
   background-position: center;
@@ -44,56 +44,4 @@ time{
   margin-top: 18px;
   width: 50%;
   color: #fff;
-}
-
-.navbarContainer{
-  width: 80%;
-  display: flex;
-  margin: 0px auto;
-  padding: 3rem 0;
-  justify-content: space-between;
-  align-items: baseline;
-}
-
-.navbarContainer nav{
-  display: flex;
-}
-
-.brand a {
-  color: #fff;
-  text-decoration: none;
-  font-size: 2.4rem;
-  font-family: 'Tangerine', cursive;
-}
-.brand a span{
-  font-family: 'Urbanist', sans-serif;
-  font-size: 1.5rem;
-  font-weight: 400;
-  padding: 0px 10px;
-}
-
-.navbarContainer ul{
-  list-style-type: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  /* padding: 0px 4rem; */
-  column-gap:3em ;
-}
-.navbarContainer ul li a {
-  text-decoration: none;
-  font-size: 1em;
-  font-family: 'Be Vietnam Pro', sans-serif;
-  color: #fff;
-}
-
-.btn button{
-  padding: 12px 15px;
-  font-size: 1rem;
-  font-family: 'Be Vietnam Pro', sans-serif;
-  background: transparent;
-  border: 1.5px solid #fff ;
-  color: #fff;
-  border-radius: .5em;
-  cursor: pointer;
 }
